--- a/Teraoka/Controllers/SettingsController/SettingsController.xib
+++ b/Teraoka/Controllers/SettingsController/SettingsController.xib
@@ -22,14 +22,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsController">
             <connections>
                 <outlet property="dineinBtn" destination="yEf-AM-i1o" id="Kau-uY-rLF"/>
+                <outlet property="fetchLanguageBtn" destination="wbk-fm-3II" id="Lpc-7L-ITi"/>
                 <outlet property="fixedBtn" destination="yPg-FP-Js1" id="lIc-bR-VT0"/>
                 <outlet property="heightRequestForAssistanceContainerView" destination="bSD-MK-fuM" id="zi0-aj-bef"/>
                 <outlet property="languageValueLb" destination="3oB-ZF-GWn" id="3Ju-sR-yop"/>
+                <outlet property="lbPleaseEnterIP" destination="Xzj-yc-54D" id="BUk-uE-7l9"/>
+                <outlet property="lbRequestForBill" destination="fpj-Si-lyG" id="Tv5-5A-ham"/>
+                <outlet property="lbRequestForWaiter" destination="xhS-5e-oYe" id="BVY-sy-fWq"/>
+                <outlet property="lbSelectLanguage" destination="eCG-hV-vGI" id="ke8-zB-Vf1"/>
+                <outlet property="lbSelectMode" destination="x5b-mL-Pst" id="ri7-0O-C6e"/>
+                <outlet property="lbSetPassword" destination="zDt-7A-4Yr" id="onW-U2-XSZ"/>
+                <outlet property="lbTableSelection" destination="F2t-gS-h9Y" id="12y-aA-WZR"/>
+                <outlet property="lbTitle" destination="nS1-zj-pGT" id="NSx-dm-M2L"/>
                 <outlet property="preOrderBtn" destination="E9R-ow-Oi7" id="S2X-FX-xho"/>
                 <outlet property="quickServeBtn" destination="Qy2-xH-uys" id="EqD-2O-8kz"/>
                 <outlet property="requestForAssistanceContainerView" destination="T6e-cf-cck" id="Z96-nd-IE7"/>
                 <outlet property="requestForAssistanceView" destination="X5X-ws-j7T" id="Gn7-cm-hHz"/>
                 <outlet property="requestForBillView" destination="hvh-cT-Qtc" id="Vsi-2L-wqp"/>
+                <outlet property="saveBtn" destination="8Nw-BH-8np" id="HDh-Oo-SXS"/>
                 <outlet property="tfConfirmPassword" destination="nay-mZ-nuH" id="GVF-dZ-0VL"/>
                 <outlet property="tfIPAddress" destination="rpp-BX-EmB" id="dqM-b4-Ukd"/>
                 <outlet property="tfNewPassword" destination="LkY-Ka-PFK" id="8X9-Em-kCc"/>
