--- a/Teraoka/Controllers/SplashController/SplashController.xib
+++ b/Teraoka/Controllers/SplashController/SplashController.xib
@@ -18,6 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SplashController">
             <connections>
+                <outlet property="lbTitle" destination="2jA-m8-6sg" id="rgf-AZ-ruA"/>
                 <outlet property="settingBtn" destination="jg4-uo-yzv" id="fvo-0g-7c6"/>
                 <outlet property="startOrderBtn" destination="PF0-OK-UUy" id="Byz-HP-wOO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
