--- a/Teraoka/Controllers/OrderConfirmController/OrderConfirmController.xib
+++ b/Teraoka/Controllers/OrderConfirmController/OrderConfirmController.xib
@@ -21,8 +21,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OrderConfirmController">
             <connections>
                 <outlet property="containerView" destination="KMZ-f5-OQh" id="t7V-ML-Gab"/>
-                <outlet property="lbQueue" destination="p6A-10-Hbt" id="XJg-lM-oOR"/>
-                <outlet property="lbReceipt" destination="fDg-b7-vuq" id="8cZ-gr-W9R"/>
                 <outlet property="lbTitle" destination="OXN-Dz-Uv2" id="tYf-Zs-ojc"/>
                 <outlet property="okBtn" destination="mbg-UT-fNg" id="tGY-C1-tai"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -53,20 +51,8 @@
                                 <constraint firstAttribute="width" constant="100" id="QhO-Ad-ZrQ"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receipt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fDg-b7-vuq">
-                            <rect key="frame" x="198" y="210" width="82" height="30"/>
-                            <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="25"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receipt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6A-10-Hbt">
-                            <rect key="frame" x="198" y="245" width="82" height="30"/>
-                            <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="25"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mbg-UT-fNg">
-                            <rect key="frame" x="30" y="295" width="294.5" height="70"/>
+                            <rect key="frame" x="30" y="280" width="294.5" height="70"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="70" id="L3U-EN-Xlb"/>
                                 <constraint firstAttribute="width" secondItem="mbg-UT-fNg" secondAttribute="height" multiplier="610:145" id="u5i-AS-maX"/>
@@ -80,7 +66,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sc6-wz-xG1">
-                            <rect key="frame" x="345.5" y="295" width="294.5" height="70"/>
+                            <rect key="frame" x="345.5" y="280" width="294.5" height="70"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Sc6-wz-xG1" secondAttribute="height" multiplier="610:145" id="CZJ-eu-ET3"/>
                                 <constraint firstAttribute="height" constant="70" id="nSY-g9-gg1"/>
@@ -96,17 +82,13 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="mbg-UT-fNg" firstAttribute="top" secondItem="p6A-10-Hbt" secondAttribute="bottom" constant="20" id="18U-OT-tU5"/>
-                        <constraint firstItem="fDg-b7-vuq" firstAttribute="leading" secondItem="OXN-Dz-Uv2" secondAttribute="leading" id="3SZ-ic-tHp"/>
-                        <constraint firstItem="p6A-10-Hbt" firstAttribute="leading" secondItem="fDg-b7-vuq" secondAttribute="leading" id="7Ah-si-zpA"/>
                         <constraint firstAttribute="trailing" secondItem="Sc6-wz-xG1" secondAttribute="trailing" constant="30" id="KN2-eA-J4R"/>
-                        <constraint firstItem="p6A-10-Hbt" firstAttribute="top" secondItem="fDg-b7-vuq" secondAttribute="bottom" constant="5" id="LMg-Fk-mcq"/>
                         <constraint firstItem="AM9-fG-BSB" firstAttribute="centerX" secondItem="KMZ-f5-OQh" secondAttribute="centerX" id="Nuw-s7-ch5"/>
                         <constraint firstAttribute="width" constant="670" id="UnW-Kb-6e2"/>
-                        <constraint firstItem="fDg-b7-vuq" firstAttribute="top" secondItem="OXN-Dz-Uv2" secondAttribute="bottom" constant="5" id="UwU-jo-Yte"/>
                         <constraint firstItem="AM9-fG-BSB" firstAttribute="top" secondItem="KMZ-f5-OQh" secondAttribute="top" constant="60" id="WaR-Gl-XlF"/>
                         <constraint firstItem="OXN-Dz-Uv2" firstAttribute="centerY" secondItem="KMZ-f5-OQh" secondAttribute="centerY" constant="-10" id="WeU-qm-f1Z"/>
                         <constraint firstAttribute="height" constant="400" id="aFx-oP-Cx1"/>
+                        <constraint firstItem="mbg-UT-fNg" firstAttribute="top" secondItem="OXN-Dz-Uv2" secondAttribute="bottom" constant="75" id="uGc-KN-WCP"/>
                         <constraint firstItem="mbg-UT-fNg" firstAttribute="leading" secondItem="KMZ-f5-OQh" secondAttribute="leading" constant="30" id="yTe-8q-pQE"/>
                         <constraint firstItem="OXN-Dz-Uv2" firstAttribute="centerX" secondItem="KMZ-f5-OQh" secondAttribute="centerX" id="ypC-f5-Bcc"/>
                         <constraint firstItem="Sc6-wz-xG1" firstAttribute="top" secondItem="mbg-UT-fNg" secondAttribute="top" id="z60-NH-tRU"/>
